# LearnOpenGL

./: CMakeLists.txt  LearnOpenGL.exe.stackdump  README.md  Shader.cpp  Shader.h  imgui.ini  main.cpp
Code/1.getting_started/1.1 Hello_Window/: 1.1 Hello_Window.cpp
Code/1.getting_started/1.2 Hello_Triangle/: 1.2.1 Hello_Triangle.cpp  1.2.2 Hello_Triangle_Matrix.cpp
Code/1.getting_started/1.3 Shaders/: 1.3.1 Shaders_Gradient_Triangle.cpp  1.3.2 Shaders_interpolation.cpp  1.3.3 Shaders_Class.cpp
Code/1.getting_started/1.4 textures/: textures_combined.cpp
Code/1.getting_started/1.5 Transformations/: 1.5.1 transformations.cpp
Code/1.getting_started/1.6 Coordinate Systems/: coordinate_systems.cpp
Code/1.getting_started/1.7 Camera/: Camera.cpp
Code/1.getting_started/Exercise/: 3. Textures.md  4. Transformations.md  5. Coordinate Systems.md  7. Camera.md  Hello Triangle.md  Shaders.md
Code/2.lighting/Exercise/: Basic Lighting.md
assets/1.getting_started/1.2Textures/: texture.frag
assets/1.getting_started/1.3CoordinateSystems/: coordinate_systems.frag
assets/2.lighting/2.2basic_lighting/: 2.2basic_lighting.frag
assets/2.lighting/3.1materials/: 3.1.materials.frag
assets/2.lighting/4.1lighting_maps_diffuse_map/: 4.1lighting_maps.frag  4.2lighting_maps.frag
assets/Textures/: texture.frag  texture.vert
assets/Tutorial/: OpenGL笔记图片来源.pptx  imgui.ini  配置imgui教程.md
assets/Tutorial/ImgUI_example/: 2.2basic_lighting.frag  example.cpp  imgui.ini
include/LearnOpenGL/: Shader.cpp  Shader.h  camera.cpp  camera.h
include/glad/: glad.h
src/: glad.c
